--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "typescript": "5.6.2"
   }
 }
