--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
