--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
