--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
@@ -21,7 +22,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "22.6.1",
