--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@reduxjs/toolkit": "^2.2.7",
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "alertifyjs": "^1.14.0",
     "axios": "^1.7.7",
-    "next": "14.2.13",
+    "next": "^14.2.15",
     "next-intl": "^3.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "react-use-cart": "^1.14.0",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
