--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
@@ -22,6 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
