--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
