--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
+    "alertifyjs": "^1.14.0",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
@@ -27,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "react-use-cart": "^1.14.0",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
