--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "@stripe/stripe-js": "^4.9.0",
     "alertifyjs": "^1.14.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "react-use-cart": "^1.14.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
